--- a/docs/style.css
+++ b/docs/style.css
@@ -12,6 +12,19 @@ background-color: #20B2AA;
     color: white;
 }
 
+nav{
+    float: none;
+    background-color: white;
+    border-width: 3px;
+    border-style: solid;
+    border-color: #20B2AA;
+    padding: 30px; 
+}
+
+nav ul{
+    list-style-type: none;
+    padding: 0;
+}
 article{
     float: left;
     padding: 20px;
