--- a/docs/style.css
+++ b/docs/style.css
@@ -22,10 +22,20 @@ nav{
 }
 
 nav ul{
-    text-align: center;  
     list-style-type: none;
     padding: 0;
 }
+
+nav li {
+  float: left;
+}
+
+nav li a {
+  color: #20B2AA;
+  text-align: center;
+  padding: 16px; 
+}
+
 article{
     float: left;
     padding: 20px;
